--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
@@ -22,12 +22,11 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^4.0.0",
     "vite": "^5.3.1"
   }
 }
